# django-keyring

./: .gitignore  LICENSE  README.md  boot_django.py  load_tests.py  makemigrations.py  pyproject.toml  requirements.txt  setup.cfg
keyring/: apps.py  fields.py
sample_project/: requirements.txt
sample_project/sample_app/: admin.py  models.py  tests.py
sample_project/sample_app/migrations/: 0001_initial.py
sample_project/sample_project/: settings.py
