# setup.cfg

[metadata]
name = django-keyring
version = 1.0.0
description = Django Keyring Integration
long_description = file:README.md
url = https://github.com/dannluciano/django-keyring
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]

include_package_data = true

python_requires = >=3.6

setup_requires =
    setuptools >= 38.3.0

install_requires =
    Django>=4.2
    keyringpy